-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
Qt Creator 3.4.1
-
None
-
Windows8.1
can't use wildcard to sub directory
.\ab.txt
.\cd.txt
abc: *.txt
@echo $**
>jom -l
ab.txt cd.txt
----------------------------
files\ab.txt
files\cd.txt
abc: files/*.txt
@echo $**
>jom -l
ECHO is on.
| For Gerrit Dashboard: QTCREATORBUG-16499 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 163479,2 | Fix wildcard handling for subdirs | master | qt-labs/jom | Status: MERGED | +2 | 0 |