Fix wildcard handling for subdirs

Task-number: QTCREATORBUG-16499
Change-Id: I262a9f6a6b0e900f8d53dda417ae26b964bd7609
Reviewed-by: Christian Kandeler <christian.kandeler@theqtcompany.com>