tests/makefiles/wildcardsInDependencies.mk
@@ -1,1 +1,2 @@
 all: *.txt foo?.cpp
+more: subdir\*.cpp
